--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title>Vigorsky</title>
+<title>vigorsky</title>
 </head>
 <body>
-<h1 style="align:center">Hello, World!</h1>
+<h1 align="center">Hello, World!</h1>
 </body>
 </html>
